// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ascii-radar > renders a deterministic chart for a full radar 1`] = `
"⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣰⣴⣀⡀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⠤⠔⠒⠉⠀⠀⡇⠀⠈⠑⠒⠤⢄⡀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⣠⠤⠒⠊⠉⠀⠀⠀⠀⢀⣀⠤⡧⢄⣀⠀⠀⠀⠀⠈⠉⠒⠢⢤⡠
⠀⠀⠀⠀⠀⠀⠀⠀⢀⠎⠙⢄⠀⠀⣀⡠⠤⠒⠉⠁⠀⠀⡇⠀⠀⠉⠑⠢⠤⣀⡀⠀⢀⠜⠉⢆
⠀⠀⠀⠀⠀⠀⠀⢀⠎⠀⠀⢀⠿⡉⠀⠀⠀⠀⠀⣀⡠⠤⡧⠤⣀⡀⠀⠀⠀⠀⠈⡹⢇⠀⠀⠈⢆
⠀⠀⠀⠀⠀⠀⢠⠃⠀⠀⢀⠎⠀⠈⢢⡤⠒⠊⠉⠀⠀⠀⡇⠀⠀⠈⠉⠒⠢⣤⠊⠀⠈⢆⠀⠀⠀⢣
⠀⠀⠀⠀⠀⢠⠃⠀⠀⢠⠃⠀⠀⢠⠃⠘⢄⠀⢀⣀⠤⠔⡗⠤⢄⣀⠀⢀⠜⠀⢣⠀⠀⠀⢣⠀⠀⠀⢣
⠀⠀⠀⠀⡔⠁⠀⠀⡠⠃⠀⠀⡰⠁⠀⠀⡠⠛⡅⠀⠀⠀⡇⠀⠀⠀⡝⠣⡀⠀⠀⠱⡀⠀⠀⠣⡀⠀⠀⠑⡄
⠀⠀⠀⢽⠥⠤⠤⣰⣁⡀⠀⡰⠁⠀⠀⡰⠁⠀⠈⢢⡔⠒⡗⠒⣤⠊⠀⠀⠱⡀⠀⠀⠱⡀⠀⣀⣱⡠⠤⠤⢽⠅
⠀⠀⠀⠸⡀⠀⠀⢣⠀⠈⠉⡏⠑⠒⢲⠥⠤⠤⣠⣃⣘⢄⣇⢜⣀⣣⡠⠤⠤⢵⠒⠒⠉⡏⠉⠀⢠⠃⠀⠀⡸
⠀⠀⠀⠀⡇⠀⠀⠸⡀⠀⠀⢣⠀⠀⠀⠇⠀⠀⢸⣀⠤⢻⢻⠣⢄⣸⠀⠀⠀⠇⠀⠀⢠⠃⠀⠀⡸⠀⠀⠀⡇
⠀⠀⠀⠀⢱⠀⠀⠀⡇⠀⠀⠸⡀⠀⠀⢇⡠⠔⠊⠒⢄⣎⢈⣆⠔⠊⠒⠤⣀⠇⠀⠀⡸⠀⠀⠀⡇⠀⠀⢰⠁
⠀⠀⠀⠀⠘⡄⠀⠀⢱⠀⠀⠀⣇⠤⠒⠉⠑⢄⠀⠀⡜⠀⠀⠘⡄⠀⢀⠔⠉⠑⠢⢄⡇⠀⠀⢰⠁⠀⠀⡜
⠀⠀⠀⠀⠀⡇⠀⠀⠸⡠⠔⠊⠉⠢⡀⠀⠀⠀⠑⢲⠥⠤⠤⠤⢵⠒⠁⠀⠀⠀⡠⠊⠉⠒⠤⡸⠀⠀⠀⡇
⠀⠀⠀⠀⠀⢼⠤⠒⠉⠈⠢⣀⠀⠀⠈⠑⢄⠀⢀⠇⠀⠀⠀⠀⠀⢇⠀⢀⠔⠉⠀⠀⢀⡠⠊⠈⠑⠢⢼⠄
⠀⠀⠀⠀⠀⠁⠑⠤⡀⠀⠀⠀⠑⢄⠀⠀⠀⠑⡞⠒⠒⠒⠒⠒⠒⠚⡖⠁⠀⠀⢀⠔⠁⠀⠀⠀⡠⠔⠁⠁
⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⣀⠀⠀⠀⠉⠢⡀⡸⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⡠⠊⠁⠀⠀⢀⡠⠊
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⢄⠀⠀⠀⢨⠓⠒⠒⠒⠒⠒⠒⠒⠒⠒⢫⠀⠀⠀⢀⠔⠁
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠢⣀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣇⡠⠊⠁
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠊⠋⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠋⠂

生产 [#####] 5
迁移 [#####] 5
准入 [#####] 5
分发 [#####] 5
组合 [#####] 5
安全 [#####] 5
开销 [#####] 5
保鲜 [#####] 5
救济 [#####] 5"
`;

exports[`ascii-radar > renders a deterministic chart for mixed values 1`] = `
"⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡠⡤⣀⡀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⠤⠔⠒⠉⠀⠀⡇⠀⠈⠑⠒⠤⢄⡀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⣠⠤⠒⠊⠉⠀⠀⠀⠀⢀⣀⠤⡧⢄⣀⠀⠀⠀⠀⠈⠉⠒⠢⢄⡀
⠀⠀⠀⠀⠀⠀⠀⠀⢀⠎⠙⢄⠀⠀⣀⡠⠤⠒⠉⠁⠀⠀⡇⠀⠀⠉⠑⠢⠤⣀⡀⠀⢀⠔⠉⢆
⠀⠀⠀⠀⠀⠀⠀⢀⠎⠀⠀⢀⠿⡉⠀⠀⠀⠀⠀⣀⡠⠤⡧⠤⣀⡀⠀⠀⠀⠀⠈⡹⣯⠀⠀⠈⢆
⠀⠀⠀⠀⠀⠀⢠⠃⠀⠀⢀⠎⠀⠈⢢⡤⠒⠊⠉⠀⠀⠀⡇⠀⠀⠈⠉⠒⠢⣤⠊⠀⡏⢆⠀⠀⠀⢣
⠀⠀⠀⠀⠀⢠⠃⠀⠀⢠⠃⠀⠀⢠⠃⠘⢄⠀⢀⣀⠤⠔⡗⠤⢄⣀⠀⢀⠜⠁⢣⠀⢸⠀⢣⠀⠀⠀⢣
⠀⠀⠀⠀⡔⠁⠀⠀⡠⠃⠀⠀⡰⠁⠀⠀⡠⠛⡅⠀⠀⠀⡇⠀⠀⠀⡝⠣⡀⠀⠀⠱⡘⡄⠀⠣⡀⠀⠀⠑⡄
⠀⠀⠀⢽⠥⠤⠤⣰⣁⡀⠀⡰⠁⠀⠀⡰⠁⠀⠈⢢⡔⠒⡗⠒⣤⠊⠀⠀⠱⡀⠀⠀⢱⣇⠀⣀⣱⡠⠤⠤⢼
⠀⠀⠀⠸⡀⠀⠀⢣⠀⠈⠉⡏⠑⠒⢲⠥⠤⠤⣠⣃⣘⢄⣇⢜⣀⣣⡠⠤⠤⢷⠒⠒⠙⡟⠉⠀⢠⠃⠀⠀⡸
⠀⠀⠀⠀⡇⠀⠀⠸⡀⠀⠀⢣⠀⠀⠀⠇⠀⠀⢸⣀⠤⢻⢻⠣⢄⣸⠀⠀⠀⠇⠀⠀⢠⠃⠀⠀⡸⠀⠀⠀⡇
⠀⠀⠀⠀⢱⠀⠀⠀⡇⠀⠀⠸⡀⠀⠀⢇⡠⠔⠊⠒⢄⣎⢈⣆⠔⠊⠒⠤⣀⠇⠀⠀⡸⠀⠀⠀⡇⠀⠀⢰⠁
⠀⠀⠀⠀⠘⡄⠀⠀⢱⠀⠀⠀⣇⠤⠒⠉⠑⢄⠀⠀⡜⠀⠀⠘⡄⠀⢀⠔⠉⠑⠢⢄⡇⠀⠀⢰⠁⠀⠀⡜
⠀⠀⠀⠀⠀⡇⠀⠀⠸⡠⠔⠊⠉⠢⡀⠀⠀⠀⠑⢲⠥⠤⠤⠤⢵⠒⠁⠀⠀⠀⡠⠊⠉⠒⠤⡸⠀⠀⠀⡇
⠀⠀⠀⠀⠀⢼⠤⠒⠉⠈⠢⣀⠀⠀⠈⠑⢄⠀⢀⠇⠀⠀⠀⠀⠀⢇⠀⢀⠔⠉⠀⠀⢀⡠⠊⠈⠑⠢⢼
⠀⠀⠀⠀⠀⠁⠑⠤⡀⠀⠀⠀⠑⢄⠀⠀⠀⠑⡞⠒⠒⠒⠒⠒⠒⠚⡖⠁⠀⠀⢀⠔⠁⠀⠀⠀⡠⠔⠁
⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⣀⠀⠀⠀⠉⠢⡀⡸⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⡠⠊⠁⠀⠀⢀⡠⠊
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⢄⠀⠀⠀⢨⠓⠒⠒⠒⠒⠒⠒⠒⠒⠒⢫⠀⠀⠀⢀⠔⠁
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠢⣀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣇⡠⠊⠁
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠊⠋⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠋⠂

生产 [-----] --
迁移 [####-] 4
准入 [###--] 3
分发 [-----] 0
组合 [#####] 5
安全 [#####] 5
开销 [#####] 5
保鲜 [#####] 5
救济 [#####] 5"
`;
